--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^4.0.0",
     "axios": "^1.7.7",
+    "firebase": "^8.10.0",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "jotai": "^2.10.2",
