--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.3",
     "react-tailwindcss-datepicker": "^1.7.2",
     "styled-component": "^2.8.0",
     "styled-components": "^6.1.13",
