--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
